--- a/SportsSideKick/app/src/main/res/drawable/rounded_button_press.xml
+++ b/SportsSideKick/app/src/main/res/drawable/rounded_button_press.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <stroke android:width="1dp" android:color="@color/colorAccent" />
-    <corners android:radius="15dp" />
-    <gradient android:startColor="@color/colorAccent" android:centerColor="@color/colorAccent" android:endColor="@color/colorAccent" android:angle="90" />
+    <stroke android:width="2dp" android:color="@color/colorPrimaryLight" />
+    <corners android:radius="30dp" />
 </shape>
