--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -223,8 +223,7 @@
             <RelativeLayout
                 android:id="@+id/bottom_right_container"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:background="@color/green_dark_1"
                 android:padding="@dimen/full_margin"/>
         </LinearLayout>
