--- a/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
@@ -1,29 +1,45 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/colorAccentLight"
     tools:context="tv.sportssidekick.sportssidekick.fragment.instance.ClubTVFragment">
+
+    <!--  \/\/\/\/\/\/\/ FIXME Dummy View to make sure container is the size of Video player fragment -->
+    <android.support.percent.PercentRelativeLayout
+        android:id="@+id/video_player_dummy_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="105dp">
+        <View
+            android:id="@+id/youtube_layout"
+            android:layout_marginBottom="16dp"
+            android:visibility="invisible"
+            app:layout_aspectRatio="178%"
+            app:layout_widthPercent="100%"/>
+    </android.support.percent.PercentRelativeLayout>
+    <!--  /\/\/\/\/\/\/\ -->
 
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="4dp"
         android:gravity="center"
         android:text="@string/sporting_cp_title"
         android:textColor="@color/white"
         android:textSize="16sp" />
 
-    <!-- STATEMENTS -->
+    <!-- Items -->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/stash_recycler_view"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignBottom="@+id/video_player_dummy_container"
         android:layout_below="@+id/caption"
-        android:layout_margin="4dp" />
+        android:layout_margin="@dimen/full_margin" />
 
 </RelativeLayout>
