--- a/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
@@ -1,86 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimarySemiLight">
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/youtube_layout_container"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_toStartOf="@+id/controls_container"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_height="wrap_content">
+        android:layout_toStartOf="@+id/controls_container">
 
         <FrameLayout
             android:id="@+id/youtube_layout"
-            app:layout_widthPercent="100%"
-            app:layout_aspectRatio="178%"
             android:layout_centerHorizontal="true"
-            android:visibility="visible" />
+            android:visibility="visible"
+            app:layout_aspectRatio="178%"
+            app:layout_widthPercent="100%" />
+
+        <SeekBar
+            android:id="@+id/seek_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_alignEnd="@+id/youtube_layout"
+            android:layout_alignStart="@+id/youtube_layout"
+            android:layout_below="@+id/youtube_layout"
+            android:thumb="@drawable/radiothumb"
+            android:layout_marginEnd="-18dp"
+            android:layout_marginStart="-16dp"
+            android:thumbOffset="0px"
+            android:progress="65"
+            android:progressDrawable="@drawable/seek_bar_custom" />
+
     </android.support.percent.PercentRelativeLayout>
 
     <RelativeLayout
         android:id="@+id/controls_container"
         android:layout_width="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_height="match_parent"
         android:layout_above="@+id/time_info"
-        android:layout_height="match_parent">
+        android:layout_alignParentEnd="true">
 
         <Button
             android:id="@+id/playlist_button"
-            android:layout_width="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_height="40dp"
+            android:layout_width="85dp"
+            android:layout_height="25dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:text="PLAYLIST"
+            android:layout_marginBottom="10dp"
+            android:minHeight="25dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button_press"
-            android:textColor="@color/white"/>
+            android:text="PLAYLIST"
+            android:textSize="10sp"
+            android:textColor="@color/white" />
 
-        <Button
+        <ImageView
             android:id="@+id/play_button"
-            android:layout_width="20dp"
-            android:layout_margin="10dp"
-            android:layout_height="20dp"
-            android:background="@drawable/radio_play"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>
+            android:padding="10dp"
+            android:src="@drawable/switch_play" />
+
         <View
             android:id="@+id/center"
-            android:layout_centerHorizontal="true"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
-        <Button
+            android:layout_height="0dp"
+            android:layout_centerHorizontal="true" />
+
+        <ImageView
             android:id="@+id/mute_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_below="@+id/play_button"
-            android:layout_margin="10dp"
-            android:layout_width="20dp"
-            android:background="@drawable/sound_icon"
-            android:layout_height="20dp"
-            android:layout_toStartOf="@+id/center"/>
-        <Button
+            android:layout_toStartOf="@+id/center"
+            android:button="@null"
+            android:gravity="center"
+            android:padding="10dp"
+            android:src="@drawable/switch_mute"
+            android:thumb="@null" />
+
+        <ImageView
             android:id="@+id/fullscreen_button"
-            android:layout_width="30dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_bar_expand"
-            android:layout_toEndOf="@+id/center"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_below="@+id/play_button"
-            android:layout_height="30dp"/>
+            android:layout_toEndOf="@+id/center"
+            android:padding="10dp"
+            android:src="@drawable/full_screen_icon" />
     </RelativeLayout>
+
     <TextView
         android:id="@+id/time_info"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:layout_alignStart="@+id/controls_container"
-        android:lines="1"
-        android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/youtube_layout_container"
-        android:padding="8dp"
-        android:textSize="12sp"
-        android:gravity="center"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/youtube_layout_container"
+        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/controls_container"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:lines="1"
+        android:padding="8dp"
+        android:text="00:00 / 00:00"
         android:textColor="@color/lightGrey"
-        android:text="00:00 / 18:21"/>
+        android:textSize="12sp" />
 
 </RelativeLayout>
